<resources>
    <string name="app_name">CiniBOOK</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="title_home">home</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>

    <string name="slide_1_title">Movie Tickets</string>
    <string name="slide_1_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_2_title">Movie Trailer</string>
    <string name="slide_2_desc">View movie trailer directly from your app!</string>

    <string name="first_activity_text1">let us help you  </string>
    <string name="first_activity_text11">see that movie. </string>

    <string name="movie_days">Monday&#8211;Wednesday&#8211;Thursday</string>
    <string name="movie_days2">Friday&#8211;Saturday&#8211;Sunday</string>
    <string name="Science_fiction">Wednesday&#8211;Thursday</string>

    <string name="first_activity_text2">cinebook partners with cinemas in calabar to help you save a seat for the latest movies.  </string>
    <string name="Action_search_text">search</string>
    <string name="Account_settings_text">Account Settings</string>
    <string name="Action_logout_text">Logout</string>
    <string name="reg_btn_txt">Register</string>
    <string name="emailHint">Email</string>
    <string name="verifyText">Verify Email</string>
    <string name="emailVerifypic">emailpic</string>
    <string name="checkMail">Check your email.</string>
    <string name="mailname">youssdsdsd</string>
    <string name="verifyBtnTxt">Check verification status</string>
    <string name="verificationStatus">Email Verified</string>

    <string name="action_settings">Settings</string>
    <string name="options">Options</string>
    <string name="orientation">Orientation</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="scallop">Scallop</string>
    <string name="background_color">Background Color</string>
    <string name="ticket_options">Ticket Options</string>
    <string name="border">Border</string>
    <string name="divider">Divider</string>
    <string name="radius">Radius</string>
    <string name="elevation">Elevation</string>
    <string name="position_percent">Position(in %)</string>
    <string name="color">Color</string>
    <string name="width">Width</string>
    <string name="padding">Padding</string>
    <string name="enable">Enable</string>
    <string name="type">Type</string>
    <string name="dash_length">Dash Length</string>
    <string name="dash_gap">Dash Gap</string>
    <string name="ticket_attributes">Ticket Attributes</string>
    <string name="movie_title"><![CDATA[Peppermint]]></string>
    <string name="movie_duration">102min</string>
    <string name="movie_genre">Action, Thriller , Drama</string>
    <string name="movie_ticket_number">400&#8211;2000&#8211;2020</string>
    <string name="date">Date</string>
    <string name="movie_date">25&#8211;12&#8211;2018</string>
    <string name="time">Time</string>
    <string name="movie_time">4:30</string>
    <string name="seat">Seat</string>
    <string name="movie_seat">C5-C8</string>
    <string name="corners">Corners</string>
    <string name="example">Example</string>
    <string name="background">Background</string>

    <string-array name="divider_type">
        <item>Normal</item>
        <item>Dashed</item>
    </string-array>

    <string-array name="scallop_position">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>

    <string-array name="corner_type">
        <item>Normal</item>
        <item>Rounded</item>
        <item>Scallop</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descriptionText">By default, a Binding class will be generated based on the name of the layout file, converting it to Pascal case and suffixing “Binding” to it. The above layout file was activity_main.xml so the generate class was ActivityMainBinding  If your xml name is main_activity.xml than DataBinding class name will be MainActivityBinding.  Take note that data binding is enabled in the build.gradle file. The tutorial will be updated to mention this explicitly.</string>
</resources>